@@ -14,6 +14,7 @@ Changes from v2.4.3 to v2.4.4
 - The maximal supported resolution is increased from 1600x1200 to 2048x1536
 - GLBoom will use the closest supported resolution when running fullscreen
 - The "RUN" key inverts the autorun state
+- Live monsters are highlighted in a different colour on the iddt-automap
 - Fixed OpenGL sky rendering in Requiem and Memento Mori
 - The "Show coordinates of automap pointer" setting works now
 - fix translucency map file handle leak
